--- a/frontend-ferremax/public/assets/css/style.css
+++ b/frontend-ferremax/public/assets/css/style.css
@@ -1,3 +1,3 @@
 #accordionSidebar {
-    background-image: linear-gradient(to right top, #000519, #00061b, #00061e, #000720, #000723, #000927, #000a2c, #000c30, #000e37, #00103e, #001145, #01114c);
+    background-image: linear-gradient(to right top, #000826, #010b2d, #000e35, #00103c, #001143, #001249, #00134f, #011355, #01155c, #011763, #01186b, #021a72);
 }
