--- a/frontend-ferremax/public/assets/css/style.css
+++ b/frontend-ferremax/public/assets/css/style.css
@@ -79,10 +79,15 @@ select {
     font-size: 17.5px;
 }
 
+input :focus {
+    outline: none;
+}
+
 input[type="text"],
 input[type="email"],
 input[type="password"],
 input[type="number"] {
+    outline: none;
     width: 100%;
     height: 30px;
     background: rgba(0, 0, 0, 0);
